modify login style

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@phosphor-icons/react": "^2.0.13",
     "@tremor/react": "^3.15.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.0.8",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.2.10",
     "he": "^1.2.0",
     "highlight.js": "^11.9.0",
     "lodash.debounce": "^4.0.8",
@@ -34,6 +36,8 @@
     "react-tooltip": "^5.25.2",
     "recharts": "^2.12.5",
     "recharts-to-png": "^2.3.1",
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.3.0",
     "text-case": "^1.0.9",
     "truncate": "^3.0.0",
     "uuid": "^9.0.0"
