--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,8 @@
     "prettier": "^3.0.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.3.1",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "shx": "^0.3.4"
   }
 }
