--- a/collector/package.json
+++ b/collector/package.json
@@ -47,6 +47,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "shx": "^0.3.4"
   }
 }
